force-app/main/default/objects/Additional_Emails__c/Additional_Emails__c.object-meta.xml
<CustomObject>
    <label>Additional Email</label>
    <nameField>
        <displayFormat>AE-{00000}</displayFormat>
        <label>Additional Email Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>