force-app/main/default/objects/Additional_Emails__c/fields/Billing_Profile__c.field-meta.xml
<CustomField>
    <fullName>Billing_Profile__c</fullName>
    <label>Billing Profile</label>
    <referenceTo>Billing_Profile__c</referenceTo>
    <relationshipLabel>Additional Emails</relationshipLabel>
    <relationshipName>Additional_Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>